# hello-world-project

./: .dockerignore  .gitignore  AGENTS.md  API_TEST_REPORT.md  E2E_TEST_REPORT_COURSE_REPORTS.md  Makefile  PRD.md  README.md  STUDENT_CREATION_ERROR_REPORT.md  after-dropdown-click.yml  auth-state.json  auth.json  cookies.txt  current-page.yml  engram-export.json  informe_pruebas_gp.md  package.json  pnpm-lock.yaml  ralph-afk.sh  ralph-once.sh  render.yaml  seed_student_progress_fixed.sql  settings-after-save.yaml  signup-page.yml  student-profile-retry.yml  student-reports-fixed.yml  student-reports-loaded.yml  students-page-after-fix.yml  students-verify.yml
apps/backend/: .dockerignore  .env.example  .env.temp  .env.test  .gitignore  AGENTS.md  Dockerfile.dev  GP.md  PRD.json  PRD.md  PROJECT_SPEC.md  README.md  alembic.ini  debug_schema.py  docker-compose.yml  fix_missing_professors.py  main.py  package.json  phase3_4_summary.json  progress.txt  pyproject.toml  pyrightconfig.json  requirements.txt  verify_data.py  verify_jwt_security.py  verify_openapi.py
apps/backend/docs/: database-design.md
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: add_download_link_to_games.py  add_game_id_and_instance_course_id.py  c2aba05ad667_add_teacher_settings_new_fields.py
apps/backend/src/admin/: __init__.py  admin.py  auth.py
apps/backend/src/api/: router.py
apps/backend/src/auth/api/: router.py
apps/backend/src/auth/infrastructure/: security.py
apps/backend/src/course/domain/: __init__.py  course.py  course_enrollment.py  course_professor.py  game_assignment_exceptions.py
apps/backend/src/course/infrastructure/: course_repository.py
apps/backend/src/game/domain/: game.py  game_instance.py  level.py  segment_level.py
apps/backend/src/game/infrastructure/: game_instance_repository.py
apps/backend/src/notification/domain/: notification.py
apps/backend/src/shared/: deps.py
apps/backend/src/shared/infrastructure/: base.py  config.py  models.py  session.py
apps/backend/src/shared/seed/: run_seed.py  seed_admin.py  seed_analytics_data.py  seed_courses.py  seed_games.py  seed_lms_credentials.py  seed_notifications.py  seed_statistics.py  seed_users.py
apps/backend/src/statistic/domain/: __init__.py  feedback.py  progress.py  xapi_statement.py
apps/backend/src/statistic/infrastructure/: metric_type_repository.py  progress_repository.py  xapi_statement_repository.py
apps/backend/src/sync/domain/: event_types.py  sync_event.py  sync_event_failure.py  sync_session.py
apps/backend/src/users/domain/: lms_credential.py  notification.py  role.py  (+4 more)
apps/backend/tests/: conftest.py  test_jwt_security_verification.py  test_openapi_security.py
apps/backend/tests/admin/: conftest.py  test_admin_auth.py  test_admin_endpoints.py  test_admin_model_view.py
apps/backend/tests/auth/: __init__.py  conftest.py  test_authenticate_usecase.py  test_change_password_usecase.py  test_register_user_usecase.py  test_security.py
apps/backend/tests/course/: conftest.py  test_assign_game_to_course_usecase.py  test_course_game_endpoints.py  test_course_management_api.py  test_course_repository.py  test_create_course_usecase.py  test_create_course_usecase_game_id.py  test_manage_enrollment_usecase.py  test_remove_game_from_course_usecase.py
apps/backend/tests/game/: __init__.py  conftest.py  test_game_instance_repository.py  test_game_repository.py  test_level_repository.py  test_segment_repository.py
apps/backend/tests/integration/: test_protected_endpoints.sh  test_sync_pipeline.sh
apps/backend/tests/shared/: test_providers.py
apps/backend/tests/statistic/: __init__.py  conftest.py  test_get_overview_stats_usecase.py  test_get_student_progress_usecase.py  test_overview_endpoint.py  test_overview_schemas.py  test_student_progress_endpoint.py  test_student_progress_schemas.py  test_xapi_statement_repository.py  test_xapi_statement_service.py
apps/backend/tests/sync/: __init__.py  conftest.py  test_complex_event_handler.py  test_event_types.py  test_pipeline_service.py  test_progress_updater.py  test_simple_event_handler.py  test_sync_endpoints.py  test_sync_event_service.py  test_sync_session_service.py
apps/backend/tests/users/: conftest.py  test_get_users_by_role.py  test_lms_credential_repository.py  test_lms_credential_service.py
(+1409 files in other folders)
