[project]
name = "hello-world-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core del Framework y Servidor
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    
    # Validación y Configuración (Pydantic v2)
    "pydantic>=2.10.0,<2.11.0",
    "pydantic-settings>=2.7.0,<2.8.0",
    
    # Base de Datos
    "sqlalchemy>=2.0.36,<2.1.0",
    "alembic>=1.14.0,<1.15.0",
    "asyncpg>=0.30.0,<0.31.0",
    
    # Autenticación y Seguridad
    "pyjwt>=2.10.0,<2.11.0",
    "bcrypt>=4.2.0,<4.3.0",
    "passlib>=1.7.4,<1.8.0",
    "python-multipart>=0.0.20,<0.1.0",
    "email-validator>=2.2.0,<2.3.0",
    
    # Utilidades y Clientes HTTP
    "httpx>=0.28.0,<0.29.0",
    "python-dotenv>=1.0.0,<1.1.0",
    
    # Testing
    "pytest>=8.3.0,<8.4.0",
    "pytest-asyncio>=0.25.0,<0.26.0",
    "pytest-mock>=3.14.0,<3.15.0",
]
