[project]
name = "hello-world-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core del Framework y Servidor
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    
    # Validación y Configuración (Pydantic v2)
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    
    # Base de Datos
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    
    # Autenticación y Seguridad
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    
    # Utilidades y Clientes HTTP
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
]
