[project]
name = "hello-world-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core del Framework y Servidor
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.34.0",
    
    # Validación y Configuración (Pydantic v2)
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    
    # Base de Datos
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    
    # Autenticación y Seguridad
    "pyjwt>=2.10.0",
    "bcrypt>=4.2.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    
    # Utilidades y Clientes HTTP
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    
    # Admin
    "sqladmin>=0.1.5",
    "itsdangerous>=2.2.0",  # Requerido por SessionMiddleware de Starlette
    
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pip-audit>=2.7.0",
    "types-passlib>=1.7.0",
    "types-python-jose>=3.3.0",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests
"__init__.py" = ["F401"]    # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
